@@ -5,4 +5,12 @@ use warnings;
 use diagnostics;
 
 use Test::Harness;
-runtests(qw(pf.t person.t pfcmd.t SNMP.t SwitchFactory.t));
+runtests( qw( 
+              pf.t 
+              person.t 
+              pfcmd.t 
+              SNMP.t 
+              SwitchFactory.t
+              binaries.t
+            )
+);
