@@ -25,6 +25,7 @@
           (http://www.packetfence.org/mantis/view.php?id=622)
         fixed compilation error in bin/accounting.pl
           (http://www.packetfence.org/mantis/view.php?id=623)
+        added tests for compilation of binaries
 
 1.8.1
         authorized @ as first symbol in password
